<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_grad_blue"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="40dp"
                >
                <ProgressBar
                    android:id="@+id/prbProgress"
                    style="@android:style/Widget.ProgressBar.Large"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:indeterminate="true"/>
                <ImageView
                    android:id="@+id/imgTitle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icone_cadastro"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/lblTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edite seus dados"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    >
                    <br.com.aidavec.aidavec.controls.RoundedImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="20dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ico_camera"
                        />
                    <EditText
                        android:id="@+id/txtFirstName"
                        style="@style/txtSignUpActivity"
                        android:hint="@string/txtSignUpFirstNameHint"
                        android:inputType="text"
                        />
                    <EditText
                        android:id="@+id/txtLastName"
                        style="@style/txtSignUpActivity"
                        android:hint="@string/txtSignUpLastNameHint"
                        android:inputType="text"
                        />
                    <EditText
                        android:id="@+id/txtEmail"
                        style="@style/txtSignUpActivity"
                        android:hint="@string/txtSignUpEmailHint"
                        android:inputType="textEmailAddress"
                        />
                    <EditText
                        android:id="@+id/txtPhone"
                        style="@style/txtSignUpActivity"
                        android:hint="@string/txtSignUpPhoneHint"
                        android:inputType="phone"
                        android:maxLength="14"
                        />
<!--                    <EditText
                        android:id="@+id/txtPassword"
                        style="@style/txtSignUpActivity"
                        android:hint="@string/txtSignUpPasswordHint"
                        android:inputType="textPassword" android:password="true"
                        />
                    <EditText
                        android:id="@+id/txtPasswordRep"
                        style="@style/txtSignUpActivity"
                        android:hint="@string/txtSignUpPasswordRepHint"
                        android:inputType="textPassword" android:password="true"
                        />
                        -->
                    <Spinner
                        android:id="@+id/ddlState"
                        style="@style/txtSignUpActivity"
                        android:background="@drawable/ddl_back"
                        android:popupBackground="@drawable/back_grad_blue"
                        android:layout_marginTop="10dp"
                        />
                    <Spinner
                        android:id="@+id/ddlCity"
                        style="@style/txtSignUpActivity"
                        android:background="@drawable/ddl_back"
                        android:popupBackground="@drawable/back_grad_blue"
                        android:layout_marginTop="10dp"
                        />

                </LinearLayout>
            </ScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:weightSum="4"
                >
                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:text="@string/btnSignUpSend"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="bottom"
                    android:background="@drawable/btn_back"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#BB000000"
            android:visibility="gone"
            >
            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="20dp"
                />
            <Button
                android:id="@+id/btnEditPreview"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="ALTERAR"
                android:textColor="@color/white"
                android:background="@drawable/back_grad_blue"
                />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>